# polyglot-live-translator

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: code-quality.yml
apps/desktop/: package.json  subtitle.html  vite.config.ts
apps/desktop/src/: AcademicFeatures.tsx  App.tsx  Onboarding.tsx  academic.css  audio.ts  extra.css  main.tsx  onboarding.css  styles.css  subtitle.css  subtitle.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: ai.rs  lib.rs  local_api.rs  main.rs  security.rs  storage.rs
apps/desktop/src-tauri/src/audio/: mod.rs  windows_capture.rs
apps/extension/: offscreen.html  package.json  popup.html  tsconfig.json  vite.config.ts
apps/extension/src/: background.ts  content.ts  offscreen.ts  popup.ts
docs/: ARCHITECTURE.md  CHECKLIST-PUBLICATION.md  GUIDE-UTILISATEUR.md  LOT-2-AUDIO-WINDOWS.md  LOT-3-CAPTURE-ONGLET.md  LOT-6-DONNEES-EXPORTS.md  LOT-7-SECURITE-COMPTES-ADMIN.md  LOT-8-INSTALLATEUR-WINDOWS.md  LOT-9-PUBLICATION-STABILISATION.md  LOTS-4-5-IA-SOUS-TITRES.md  PLAN-DE-TESTS.md  PRIVACY.md  ROADMAP.md  VERSION-ACADEMIQUE-COMPLETE.md
workflows/: code-quality.yml  windows-build.yml
