[package]
name = "polyglot-live-translator"
version = "0.1.0"
description = "Traduction audio et vidéo en temps réel"
authors = ["BAKELE"]
edition = "2021"

[lib]
name = "polyglot_live_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

