[package]
name = "polyglot-live-translator"
version = "1.0.0"
description = "Traduction audio et vidéo en temps réel"
authors = ["BAKELE"]
edition = "2021"

[lib]
name = "polyglot_live_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
futures-util = "0.3"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1", features = ["net", "sync", "time", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.24"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"
docx-rs = "0.4"
printpdf = "0.7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Multimedia",
  "Win32_System_Com"
] }
